--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <title>Document</title>
   </head>
 
-  <body class="body">
+  <body class="body bodyContainer">
     <div class="container containerTitulo">
       <div class="row">
 
