--- a/compromiso.html
+++ b/compromiso.html
@@ -31,7 +31,17 @@
   <body class="body">
     <div class="container-fluid continerCompromiso">
       <div class="row justify-content-center text-center">
-        <div class="col-xl-12 pasos">asdasdasdsad</div>
+        <div class="col-xl-12 pasos">
+          <div>
+            <i class="far fa-circle"></i>
+            <p>Nombre y correo</p>
+          </div>
+          <hr>
+          <div>
+            <i class="far fa-circle"></i>
+            <p>Intereses</p>
+          </div>
+      </div>
 
         <div class="col-xl-7 compromisoTitulo">
           <img src="./img/profile.png" alt="" />
