--- a/index.html
+++ b/index.html
@@ -29,9 +29,15 @@
   </head>
 
   <body class="body bodyContainer">
+    <nav class="navbar navbar-light">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="./img/logo-dsrp-blanco.png">
+        </a>
+      </div>
+    </nav>
     <div class="container containerTitulo">
       <div class="row">
-
         <div class="col-xl-12 titulo">
           <img src="./img/logoC.png" alt="" class="logoC" />
           <p>Curso de introducción a C</p>
