--- a/compromiso.html
+++ b/compromiso.html
@@ -29,6 +29,13 @@
   </head>
 
   <body class="body">
+    <nav class="navbar navbar-light">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="./img/logo-dsrp-blanco.png">
+        </a>
+      </div>
+    </nav>
     <div class="container-fluid continerCompromiso">
       <div class="row justify-content-center text-center">
         <div class="col-xl-12 pasos">
